<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dam2.pmm_practica_01_javiersanzrozalen.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/str_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewNombre"
                android:textColor="@color/colorNegraco"
                android:textSize="20sp"/>

            <TextView
                android:hint="@string/str_campoNombreVacio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewNombreVacio"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/str_edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEdad"
                android:textColor="@color/colorNegraco"
                android:textSize="20sp"/>

            <TextView
                android:hint="@string/str_campoEdadVacio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEdadVacio"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/str_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTelefono"
                android:textColor="@color/colorNegraco"
                android:textSize="20sp"/>

            <TextView
                android:hint="@string/str_campoTelefonoVacio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTelefonoVacio"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/str_ubicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewUbicacion"
                android:textColor="@color/colorNegraco"
                android:textSize="20sp"/>

            <TextView
                android:hint="@string/str_campoUbicacionVacio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewUbicacionVacia"
                android:textSize="20sp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewVacio"
                android:textColor="@color/colorNegraco"
                android:textSize="20sp"/>

            <TextView
                android:hint="@string/str_campoUbicacionVacio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewUbicacionVacia2"
                android:textSize="20sp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

        <Button
            android:text="@string/str_botonGoogleMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonVerGoogleMaps"
            android:enabled="false"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:text="@string/str_botonEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonEditar" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
