<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dam2.pmm_practica_01_javiersanzrozalen.SecondActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/str_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/textViewNombreSecond"
                android:textColor="@color/colorNegraco"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/str_hint_escribirNombre"

                android:id="@+id/editTextNombre" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:text="@string/str_edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEdadSecond"
                android:textColor="@color/colorNegraco"
                android:textSize="20sp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBarEdad"
                    android:max="35"/>

                <TextView
                    android:hint="@string/str_seekBar_edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewSeekBarEdad"
                    android:textSize="14sp"
                    android:gravity="center_horizontal" />
            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/str_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTelefonoSecond"
                android:textColor="@color/colorNegraco"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"

                android:hint="@string/str_hint_escribirTelefono"
                android:id="@+id/editTextTelefono" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ToggleButton
                android:textOn="@string/str_toggleBtn_EsconderCoordenadas"
                android:textOff="@string/str_toggleBtn_ObtenerCoordenadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButtonCoordenadas"
                />

        </TableRow>

        <TableRow
            android:id="@+id/filaCoordenadas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/str_latitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textLatitud"
                    android:textColor="@color/colorNegraco"
                    android:layout_weight="1"
                    android:visibility="invisible"/>

                <TextView
                    android:hint="Latitud vacía"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textCampoLatitud"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/filaCoordenadas2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            >


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/str_longitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewLongitud"
                    android:textColor="@color/colorNegraco"
                    android:layout_weight="1"
                    android:visibility="invisible"/>

                <TextView
                    android:text="Longitud vacía"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewCampoLongitud"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:text="@string/str_btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAceptar" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
